--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   file_picker: ^8.1.4
   pdf: ^3.11.1
   path_provider: ^2.1.5
+  intl: ^0.19.0
+  printing: ^5.13.4
+
+
   pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
