--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   path_provider: ^2.1.5
   intl: ^0.19.0
   printing: ^5.13.4
-
+  simple_barcode_scanner: ^0.2.5
 
 #  pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
