--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   printing: ^5.13.4
   simple_barcode_scanner: ^0.2.5
 
-#  pdf_text: ^0.5.0
+  pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
