--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   excel: ^4.0.6
   file_picker: ^8.1.4
   pdf: ^3.11.1
@@ -37,6 +39,8 @@ dependencies:
   intl: ^0.19.0
   printing: ^5.13.4
   simple_barcode_scanner: ^0.2.5
+  easy_localization: ^3.0.0
+
 
   pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
@@ -66,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
