--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   printing: ^5.13.4
   simple_barcode_scanner: ^0.2.5
   easy_localization: ^3.0.0
-
+  camera_windows: ^0.2.6+1
+  go_router: ^13.2.0
 
   pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
