--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   easy_localization: ^3.0.0
   camera_windows: ^0.2.6+1
   go_router: ^13.2.0
+  http: ^1.2.1
+  url_launcher: ^6.2.5
+  path: ^1.9.0
 
   pdf_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
