--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   google_fonts: ^6.1.0
   cupertino_icons: ^1.0.6
   window_manager: ^0.3.8
-
+  mailer: ^6.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
