--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   window_manager: ^0.3.8
   mailer: ^6.4.1
   shared_preferences: ^2.5.3
+  firebase_core: ^2.27.1
+  cloud_firestore: ^4.15.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
