feat: Add OQC API testing tool - Implement HTML interface for testing API responses and validating fields using Google Gemini AI - Include README for usage instructions and deployment steps - Establish flavor configuration for Taiwan and Vietnam factories

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,20 @@ android {
         versionName = flutterVersionName
     }
 
+    flavorDimensions = ["factory"]
+    productFlavors {
+        tw {
+            dimension = "factory"
+            applicationIdSuffix = ".tw"
+            resValue "string", "app_name", "Zerova OQC Report TW"
+        }
+        vn {
+            dimension = "factory"
+            applicationIdSuffix = ".vn"
+            resValue "string", "app_name", "Zerova OQC Report VN"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
