--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_core: ^2.27.1
   cloud_firestore: ^4.15.9
+  package_info_plus: ^8.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
